[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pp_parse"
version = "0.1"
description = "Premiere Pro Extract File Names"
authors = [
    { name = "Frank Giraffe", email = "fgiraffe@gmail.com" }
]
urls = { "Homepage" = "https://github.com/fgiraffe/pp_parse" }
dependencies = ["nose"]

[tool.setuptools.packages.find]
where = ["pp_parse"]
